[package]
name = "envup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
rand = "0.8.5"
rpassword = "7.3.1"
thiserror = "1.0.61"
xshell = "0.2.6"
